--- a/styles.css
+++ b/styles.css
@@ -32,11 +32,17 @@ h2, h4{
 .selection{
     font-size: 3rem;
 }
+.info-pizza{
+    text-align: center;
+}
 .title{
     font-size: 1.5rem;
     border: 2px solid yellowgreen;
     border-radius: 4px;
-    padding: 0.5rem
+    padding: 0.5rem;
+    margin-top: 1rem;
+    display: flex;
+    justify-content: center;
 }
 .precio{
     font-size: 1.5rem;
@@ -65,8 +71,19 @@ h2, h4{
     border: 3px solid red;
     border-radius: 5px;
     padding: 0.7rem;
-    
 }
+img{
+    width: 400px;
+    height: 300px;
+    object-fit: cover;
+    border-radius: 5px;
+    box-shadow: 0px 0px 18px 0px rgba(0,0,0,0.75);
+-webkit-box-shadow: 0px 0px 18px 0px rgba(0,0,0,0.75);
+-moz-box-shadow: 0px 0px 18px 0px rgba(0,0,0,0.75);
+}
+
+
+
 @media (max-width: 380px){
     .selection{
         font-size: 2.5rem;
